--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="card"> 
    <img src="https://github.com/DzarelDeveloper/Img/blob/main/ulangtahun.jpg?raw=true" alt="birthday" class="birthday"> 
    <div class="text"> 
-    <h1>Hi Nisa</h1> 
+    <h1>Hi Charis</h1> 
     <p>Happy Birthday! May this new age bring you closer to achieving all your hopes and dreams.
 <br><br>
 Wishing you continued health, happiness, and blessings in every step of your life.
